vlib/v/checker/tests/no_interface_instantiation_c.vv
interface Speaker {
    speak()
}

fn my_fn(_ Speaker) {}

fn main() {
    my_fn(
        speak: 1
    )
}
